--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -1,111 +1,5 @@
 .gpt3__navbar {
   display: flex;
-  align-items: center;
-  /* justify-content: space-evenly; */
-  height: 80px;
-  padding: 0 2rem;
-  background-color: var(--color-bg);
-  color: #ffff;
-  font-size: 18px;
-  font-weight: 500;
-}
-
-/* .gpt3__navbar-list a {
-  margin: 0 2rem;
-} */
-
-.gpt3__navbar img {
-  width: 62.56px;
-  height: 16.02px;
-  cursor: pointer;
-}
-
-a {
-  margin-right: 2rem;
-}
-
-a, .gpt3__navbar-sign-btn {
-  font-family: var(--font-family);
-  font-weight: 500;
-  font-size: 18px;
-  line-height: 25px;
-  border: 0;
-}
-
-nav {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  gap: 12rem;
-  margin: 0 7rem;
-}
-
-.gpt3__navbar-sign-btn {
-  padding: 0.5rem 2rem;
-  background: #FF4820;
-  border-radius: 5px;
-  color: #fff;
-  cursor: pointer;
-}
-
-.nav-btn {
-  padding: 5px;
-  cursor: pointer;
-  background: transparent;
-  border: none;
-  outline: none;
-  color: #ffff;
-  display: none;
-  opacity: 0;
-  font-size: 1.8rem;
-} 
-
-@media screen and (max-width: 1024px) {
-  .gpt3__navbar-list,
-  .gpt3__navbar-sign {
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-  }
-
-  .gpt3__navbar-list {
-    margin-top: 2rem;
-  }
-
-  .nav-btn {
-    /* visibility: visible; */
-    display: block;
-    opacity: 1;
-    position: absolute;
-    right: 2rem;
-  }
-
-  nav {
-    position: fixed;
-    top: 2rem;
-    right: 2.4rem;
-    height: 85%;
-    width: 40%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-self: center;
-    gap: 1.5rem;
-    background-color: var(--color-footer);
-    transition: 1s;
-    transform: translateY(-100vh);
-  }
-
-  .responsive_nav {
-    transform: none;
-    margin-top: -8px;
-  }
-}
-
-/* ------------------------------------------ */
-
-/* .gpt3__navbar {
-  display: flex;
   justify-content: space-between;
   align-items: center;
 
@@ -119,11 +13,11 @@ nav {
   align-items: center;
 }
 
-.gpt3__navbar-links-logo {
+.gpt3__navbar-links_logo {
   margin-right: 2rem;
 }
 
-.gpt3__navbar-links-logo img {
+.gpt3__navbar-links_logo img {
   width: 62.56px;
   height: 16.02px;
 }
@@ -140,9 +34,9 @@ nav {
 }
 
 .gpt3__navbar-links_container p,
-.gpt3__navbar,
+.gpt3__navbar-sign p,
 .gpt3__navbar-menu_container p {
-  color: #ffffff;
+  color: #fff;
   font-family: var(--font-family);
   font-weight: 500;
   font-size: 18px;
@@ -153,68 +47,88 @@ nav {
   cursor: pointer;
 }
 
-.gpt3__navbar-sign button {
+.gpt3__navbar-sign button,
+.gpt3__navbar-menu_container button {
   padding: 0.5rem 1rem;
-  color: #ffffff;
-  background: #ff4820;
+  color: #fff;
+  background: #FF4820;
   font-family: var(--font-family);
   font-weight: 500;
   font-size: 18px;
   line-height: 25px;
-  border-radius: 5px;
-  border: 0;
+  border: none;
   outline: none;
   cursor: pointer;
-} */
+  border-radius: 5px;
+}
 
-/* ******************************************** */
-/* 
 .gpt3__navbar-menu {
-    margin-left: 1rem;
+  margin-left: 1rem;
 
-    display: none;
-    position: relative;
+  display: none;
+  position: relative;
 }
 
 .gpt3__navbar-menu svg {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 .gpt3__navbar-menu_container {
-    display: flex;
-    justify-content: flex-end;
-    align-items: flex-end;
-    flex-direction: column;
-    
-    text-align: end;
-    background: var(--color-footer);
-    padding: 2rem;
-    position: absolute;
-    top: 40px;
-    right: 0;
-    margin-top: 1rem;
-    min-width: 210px;
-    border-radius: 5px;
-    box-shadow: 0 0 5 rgba(0, 0, 0, 0.2);
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-end;
+  flex-direction: column;
+  
+  text-align: end;
+  background: var(--color-footer);
+  padding: 2rem;
+  position: absolute;
+  right: 0;
+  top: 40px;
+  margin-top: 1rem;
+  min-width: 210px;
+  border-radius: 5px;
+  box-shadow: 0px 0px 5px rgba(0,0, 0,0.2);
 }
 
 .gpt3__navbar-menu_container p {
-    margin: 1rem 0;
+  margin: 1rem 0;
 }
 
 .gpt3__navbar-menu_container-links-sign {
-    display: none;
-} */
+  display: none;
+}
 
-/* ---------------MEDIA QUERY ------------------ */
+@media screen and (max-width: 1050px) {
+  .gpt3__navbar-links_container {
+      display: none;
+  }
 
-/* ---------------LARGE DEVICES ---------------- */
-/* @media screen and (max-width: 1050px) {
-    .gpt3__navbar-links_container {
-        display: none;
-    } 
+  .gpt3__navbar-menu {
+      display: flex;
+  }
+}
 
-    .gpt3__navbar-menu {
-        display: flex;
-    }
-} */
+@media screen and (max-width: 700px) {
+  .gpt3__navbar {
+      padding: 2rem 4rem;
+  }
+}
+
+@media screen and (max-width: 550px) {
+  .gpt3__navbar {
+      padding: 2rem;
+  }
+
+  .gpt3__navbar-sign {
+      display: none;
+  }
+
+  .gpt3__navbar-menu_container {
+      top: 20px;
+  }
+
+  .gpt3__navbar-menu_container-links-sign {
+      display: block;
+  }
+}
