--- a/src/containers/footer/footer.css
+++ b/src/containers/footer/footer.css
@@ -32,6 +32,7 @@ gpt3__footer-heading {
     border: 1px solid #ffffff;
     text-align: center;
     
+    margin-top: 2rem;
     margin-bottom: 10rem;
     cursor: pointer;
 }
